# Zap-Browser

./: .gitignore  README.md  SECURITY.md  electron-builder.yml  errore.txt  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-release.yml
docs/: release-smoke-test.md
firefox-profile/: user.js
src/: App.svelte  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cashu.rs  db.rs  lightning.rs  liquid.rs  main.rs  nostr.rs  privacy.rs  vault.rs  wallet.rs
src/components/browser/: FavoritesPanel.tsx  NewTabPage.tsx  TabBar.tsx  Toolbar.tsx  WebArea.tsx
src/components/nostr/: NostrPanel.tsx
src/components/settings/: SettingsPanel.tsx
src/components/wallet/: WalletPanel.tsx
src/main/: blocklist.js  cashu.js  cosmetic.js  db.js  doh.js  index.js  index.js.bak-session-perms  keychain.js  lnurl.js  nostr.js  nostr.js.bak  nwc.js  nwc.js.bak  overlayProtection.js  portable.js  privacy.js  validate.js  value4value.js  wallet.js
src/main/browser/: profileContext.js  viewManager.js
src/main/ui/: bookmarkFolderPopup.js  bookmarkMenus.js  nativeMenus.js
src/pages/: BrowserPage.tsx  OnboardingPage.tsx
src/preload/: shell.js  webview.js  webview.js.bak
src/renderer/: App.tsx  i18n.ts  index.html  main.tsx  theme.ts  tsconfig.json  useLang.ts  vite.config.ts
src/renderer/components/browser/: DownloadsPanel.tsx  FavoritesPanel.tsx  NewTabPage.tsx
src/renderer/components/nostr/: NostrPanel.tsx
src/renderer/components/settings/: BrowserProfilesSection.tsx  SettingsPanel.tsx
src/renderer/components/wallet/: WalletPanel.tsx
src/renderer/pages/: BrowserPage.tsx  BrowserPage.tsx.bak-lnurl  OnboardingPage.tsx
src/renderer/store/: browserStore.ts
src/renderer/styles/: globals.css
test/: bookmark-ordering.test.js  migration-hardening.test.js  overlay-protection.test.js  profile-architecture.test.js  run.js
