[package]
name = "zap-browser"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bip39 = { version = "2.0.0", features = ["rand"] }
# src-tauri/Cargo.toml
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "gzip"] }
# IL MOTORE CRITTOGRAFICO NOSTR
nostr = { version = "0.29", features = ["nip06"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
