[package]
name = "zap-browser"
version = "0.1.0"
description = "Privacy-first browser with native NWC Lightning, Liquid L-BTC, Cashu and Nostr"
authors = ["Zap Browser Contributors"]
license = "MIT"
repository = "https://github.com/shadowbipnode/Zap-Browser-"
edition = "2021"
rust-version = "1.75"

[lib]
name = "zap_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                          = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell             = "2"
tauri-plugin-dialog            = "2"
tauri-plugin-store             = "2"
tauri-plugin-http              = "2"
tauri-plugin-clipboard-manager = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
thiserror   = "1"
log         = "0.4"
env_logger  = "0.11"

# BIP39 / HD wallet / secp256k1
bip39       = { version = "2", features = ["rand"] }
bitcoin     = { version = "0.31", features = ["rand-std"] }
secp256k1   = { version = "0.28", features = ["global-context", "rand-std"] }
rand        = "0.8"
hmac        = "0.12"
sha2        = "0.10"
hex         = "0.4"

# Nostr (NIP-06, NIP-07, NIP-47)
nostr-sdk   = { version = "0.28", features = ["all-nips"] }

# Encrypted storage
rusqlite    = { version = "0.31", features = ["bundled"] }

# HTTP + WebSocket (NWC relay)
reqwest             = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite   = { version = "0.21", features = ["native-tls"] }
url                 = "2"

# Crypto
aes-gcm   = "0.10"
pbkdf2    = "0.12"
zeroize   = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
